fix css button mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -632,6 +632,9 @@ label {
   /* span {
     font-size: 10px;
   } */
+  .form_icon {
+    margin-right: -20px;
+  }
   .unit {
     font-size: 12px;
   }
